--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,15 +18,15 @@
          </label>
 
          <div class="trigger">
-            {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "lang", page.lang | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
+            {%- assign menu = site.data.menu[page.lang] -%}
+
+            {%- for path in menu -%}
+            <a class="page-link" href="{{ path.url | relative_url }}">{{ path.title | escape }}</a>
             {%- endfor -%}
+            
             {%- for block in site.data.lang  -%}
             {%- if block.lang != page.lang -%}
-            <a class="page-link" href="/{{block.lang}}">{{block.name}}</a>
+            <a class="page-link lang" href="/{{block.path}}">{{block.name}}</a>
             {%- endif -%}
             {%- endfor -%}
          </div>
