--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " it" }}">
 
-{%- include head.html -%}
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   {%- seo -%}
+   <link rel="stylesheet" href="/assets/main.css?timestamp={{site.time | date: '%s' }}"">
+   {%- feed_meta -%}
+   {%- if jekyll.environment == 'production' and site.google_analytics -%}
+     {%- include google-analytics.html -%}
+   {%- endif -%}
+</head>
 
 <body>
-  {%- include header.html -%}
+  
 
   <main class="page-content" aria-label="Content">
+  <section class="header">
+    <div class="wrapper">
+      <div class="logo">
+      <a href="/" >~ Claudio Valerio</a>
+      </div>
+      <div class="sub-header">
+        <div class="typewriter">
+        I'm an old programmer, I like comments...
+        </div>
+      </div>
+    </div>
+  </section>
     <div class="wrapper">
       {{ content }}
     </div>
+  <section class="footer">
+    <div class="wrapper"></div>
+  </section>
   </main>
 
-  {%- include footer.html -%}
-
 </body>
-
+<script src="/assets/main.js?timestamp={{site.time | date: '%s'}}"></script>
 </html>
