--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-  type="text/css" />
 <div class="home">
   {%- if page.title -%}
   <h1 class="page-heading">{{ page.title }}</h1>
@@ -14,13 +13,12 @@ layout: default
   <ul class="post-list">
     {%- for post in site.posts limit:5 -%}
     <li>
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      <span class="post-meta">{{ post.date | date: date_format }}</span>
-      <h3>
         <a class="post-link" href="{{ post.url | relative_url }}">
-          {{ post.title | escape }}
+      
+          <span>{{ post.title | escape }}</span>
+          <span> - </span>
+          <span class="post-meta">{{ post.date | date: "%d-%m-%Y" }}</span>
         </a>
-      </h3>
       {%- if site.show_excerpts -%}
       {{ post.excerpt }}
       {%- endif -%}
@@ -32,3 +30,4 @@ layout: default
   {%- endif -%}
 
 </div>
+<script src="/assets/home.js?timestamp={{site.time | date: '%s'}}"></script>
