--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -1,23 +1,52 @@
-$wrapperWidthWebkit: -webkit-calc(900px - (30px * 2));
-$wrapperWidth: calc(900px - (30px * 2));
 
 body {
+   margin:0;
+   padding: 20px 0;
    color: #333;
-   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-   font-size: 100%;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-size: 16px;
    line-height: 1.4;
-   background-color: #fff;
+   background-image: linear-gradient(45deg,rgba(45, 185, 185, 0.753), rgb(143, 229, 255), );
+   min-height: calc(100vh - 40px);
+   display: flex;
+flex-direction: column;
+align-content: center;
+justify-content: center;
+align-items: center;
+
+   main {
+      width: 1024px;
+      min-height: 95vh;
+      border-radius: 20px;
+      background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.9));
+      backdrop-filter: blur(30px);
+
+      .wrapper {
+         padding: 10px;
+      }
+
+      .header {
+         padding-top: 15px;
+            text-align: center;
+
+         .logo {
+            font-weight: 600;
+            font-size: 1.5rem;
+
+            a {
+               text-decoration: none;
+            }
+         }
+
+         .sub-header {
+            color: green;
+            font-family: 'Courier New', Courier, monospace;
+         }
+      }
+   }
+
 }
 
-h1{
-   
-   text-align: center;
-}
-
-.wrapper {
-   max-width: $wrapperWidthWebkit;
-   max-width: $wrapperWidth;
-}
 
 .right {
    text-align: right;
@@ -30,4 +59,3 @@ h1{
 .left{
    text-align: left;
 }
-
