--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,11 +1,57 @@
 ---
+
 ---
 
-@import "minima";
 
 @import "general";
+@import "colors";
 @import "blog";
 
 .sub-header {
-   line-height: 2rem;
+   display: flex;
+   place-content: center;
+}
+
+.typewriter {
+  border-right: solid 3px rgba(0,255,0,.75);
+  white-space: nowrap;
+  overflow: hidden;    
+  font-family: 'Source Code Pro', monospace;  
+
+  &::before{
+     display: inline-block;
+     content: '';
+     animation: comment-starter 18s steps(24,end)  infinite;
+  }
+}
+
+
+.typewriter{
+   animation: 
+    animated-text 6s steps(42,end)  infinite  normal both,
+             animated-cursor 600ms steps(36,end) infinite;
+}
+
+@keyframes comment-starter {
+   0% { content: '//'}
+   32% { content: '//'}
+   33% { content: '\''}
+   65% { content: '\''}
+   66% { content: '#'}
+   99% { content: '#'}
+   100% { content: '//'}
+}
+
+@keyframes animated-text{
+  0%{width: 0;}
+  10%{width: 0;}
+  40%{width: 390px;}
+  60%{width: 390px;}
+  90%{width: 0}
+  100%{width: 0}
+}
+
+@keyframes animated-cursor{
+  from{border-right-color: rgba(0,255,0,.75);}
+  to{border-right-color: transparent;}
 }
