--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       </div>
       <div class="sub-header">
         <div class="typewriter">
-        I'm an old programmer, I like comments...
+        <div class="paper">I'm an old programmer, I like comments...</div>
         </div>
       </div>
     </div>
